--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ background color #2F303A
 
 body {
   font-family: Roboto, Raleway, sans-serif;
-  color: var(--main-text-color);
+  color: var(--main-text-color);  
 }
 
 /* reset! */
@@ -48,6 +48,7 @@ ul {
 
 .img-display {
   display: block;
+  max-width: 100%;
 }
 
 /* class container для div который будет оборачивать контент секции */
@@ -82,9 +83,7 @@ ul {
   align-items: center;
 }
 
-.header-adress {
-  margin-left: 344px;
-}
+
 
 .logo {
   font-family: Raleway, sans-serif;
@@ -132,6 +131,7 @@ ul {
 .header-adress {
   display: flex;
   padding-left: 0;
+  margin-left: auto;
 }
 .ha-adress + .ha-adress {
   margin-left: 50px;
@@ -178,7 +178,7 @@ ul {
 }
 
 .service {
-  display: inline-block;
+  display: block;
   border: 0px solid transparent;
   border-radius: 4px;
   padding: 10px 32px;
@@ -191,6 +191,8 @@ ul {
   line-height: 1.88;
   letter-spacing: 0.06em;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 .service:hover,
 .service:focus {
@@ -342,8 +344,8 @@ ul {
   display: flex;
   justify-content: center;
   padding-left: 0;
-  padding-bottom: 16px;
-  margin-bottom: 34px;
+  
+  margin-bottom: 50px;
 }
 .btn + .btn {
   margin-left: 8px;
@@ -371,16 +373,39 @@ ul {
   flex-wrap: wrap;
   padding-left: 0;
   gap: 30px;
+
 }
 
-/* .filter-works li {
+.f-w-item {
+  /* width: 370px; */
+  /* margin-right: 30px;
+  margin-bottom: 30px; */
+  max-width: calc((100%-60px)/3);
+}
+
+/* .f-w-item:nth-child(3n) {
+  margin-right: 0;
+}
+.f-w-item:nth-last-child(-n+3) {
+  margin-bottom: 0;
 } */
+
+.border-discription {
+  /* outline: 1px solid tomato; */
+  border-bottom: 1px solid #EEEEEE;
+  border-right:1px solid #EEEEEE;
+  border-left:1px solid #EEEEEE;
+  padding: 20px 24px;
+}
+
+
 
 .example {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--main-text-color);
+  margin-bottom: 4px;
 }
 .example-name {
   font-weight: 400;
@@ -389,3 +414,7 @@ ul {
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
+
+/* .example-img {
+  margin-bottom:20px;
+} */
