--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,3 @@
-/* 
-logo second text color #000000
-main text color #212121 
-secondary text color #757575
-third text color #FFFFFF
-active text color #2196F3
-background color #2F303A
-*/
 :root {
   --first-logo-color: #000000;
   --white-color: #ffffff;
@@ -20,13 +12,10 @@ background color #2F303A
 
 body {
   font-family: Roboto, Raleway, sans-serif;
-  color: var(--main-text-color);  
+  color: var(--main-text-color);
 }
 
-/* reset! */
-ul {
-  list-style: none;
-}
+/* ------------reset-----------*/
 
 h1,
 h2,
@@ -38,6 +27,10 @@ p,
 ul {
   margin-top: 0;
   margin-bottom: 0;
+}
+
+ul {
+  list-style: none;
 }
 
 /* padding for sections */
@@ -56,7 +49,7 @@ ul {
 .container {
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid tomato;
+  /* outline: 1px solid tomato; */
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
@@ -83,8 +76,6 @@ ul {
   align-items: center;
 }
 
-
-
 .logo {
   font-family: Raleway, sans-serif;
   color: var(--active-text-color);
@@ -103,12 +94,13 @@ ul {
   display: flex;
   padding-left: 0;
   margin-left: 93px;
+  gap: 50px;
 }
 
 /* another method !!!!*/
-.head-item + .head-item {
+/* .head-item + .head-item {
   margin-left: 50px;
-}
+} */
 /* /* another method !!!! */
 
 .main-nav-item {
@@ -132,10 +124,11 @@ ul {
   display: flex;
   padding-left: 0;
   margin-left: auto;
+  gap: 50px;
 }
-.ha-adress + .ha-adress {
+/* .ha-adress + .ha-adress {
   margin-left: 50px;
-}
+} */
 
 .current {
   color: var(--active-text-color);
@@ -155,7 +148,7 @@ ul {
   color: var(--active-text-color);
 }
 
-/* main styles */
+/* ------------------main styles--------------------- */
 
 .hero {
   background-color: var(--background-color);
@@ -208,6 +201,11 @@ ul {
   letter-spacing: 0.03em;
   padding-left: 0;
   display: flex;
+  gap: 30px;
+}
+
+.priorities li {
+  width: 270px;
 }
 
 .benefit-item {
@@ -235,6 +233,7 @@ ul {
 }
 .what-to-do-list {
   display: flex;
+  gap: 30px;
 }
 
 .team {
@@ -246,9 +245,16 @@ ul {
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
 }
 .our-team-list {
   display: flex;
+  gap: 30px;
+}
+.our-team-list li {
+  padding-bottom: 30px;
+  background-color: var(--white-color);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-member {
@@ -257,6 +263,7 @@ ul {
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 10px;
+  margin-top: 30px;
 }
 
 .work-member {
@@ -321,8 +328,6 @@ ul {
 }
 /* -------------------------portfolio styles-------------------------- */
 
-.main-section {
-}
 .our-works {
   font-weight: 700;
   font-size: 36px;
@@ -330,6 +335,7 @@ ul {
   text-align: center;
   letter-spacing: 0.03em;
 }
+
 .visually-hidden {
   overflow: hidden;
   position: absolute;
@@ -344,7 +350,7 @@ ul {
   display: flex;
   justify-content: center;
   padding-left: 0;
-  
+
   margin-bottom: 50px;
 }
 .btn + .btn {
@@ -373,32 +379,22 @@ ul {
   flex-wrap: wrap;
   padding-left: 0;
   gap: 30px;
-
 }
 
 .f-w-item {
   /* width: 370px; */
   /* margin-right: 30px;
   margin-bottom: 30px; */
-  max-width: calc((100%-60px)/3);
+  max-width: calc((100%-60px) / 3);
 }
-
-/* .f-w-item:nth-child(3n) {
-  margin-right: 0;
-}
-.f-w-item:nth-last-child(-n+3) {
-  margin-bottom: 0;
-} */
 
 .border-discription {
   /* outline: 1px solid tomato; */
-  border-bottom: 1px solid #EEEEEE;
-  border-right:1px solid #EEEEEE;
-  border-left:1px solid #EEEEEE;
+  border-bottom: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
   padding: 20px 24px;
 }
-
-
 
 .example {
   font-size: 18px;
