--- a/css/styles.css
+++ b/css/styles.css
@@ -62,8 +62,6 @@ ul {
   border-bottom-color: #ececec;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  padding-top: 25px;
-  padding-bottom: 25px;
 }
 
 .navigation {
@@ -112,6 +110,7 @@ ul {
   line-height: 1.14;
   text-decoration: none;
   letter-spacing: 0.02em;
+  padding: 32px 0;
 }
 
 .main-nav-item:hover,
@@ -141,6 +140,7 @@ ul {
   line-height: 1.14;
   text-decoration: none;
   letter-spacing: 0.02em;
+  padding: 32px 0;
 }
 
 .contact-me:hover,
@@ -252,18 +252,21 @@ ul {
   gap: 30px;
 }
 .our-team-list li {
-  padding-bottom: 30px;
   background-color: var(--white-color);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
+.t-m-dis {
+  padding: 30px;
+}
 .team-member {
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 10px;
-  margin-top: 30px;
 }
 
 .work-member {
